--- a/Informatique/MachineLearning/CPP/calibrationAndProjection/calibrationAndProjection.cbp
+++ b/Informatique/MachineLearning/CPP/calibrationAndProjection/calibrationAndProjection.cbp
@@ -17,75 +17,75 @@
 			<Add option="-Wall" />
 		</Compiler>
 		<Linker>
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_calib3d_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_calib3d2410.dll.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_contrib_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_contrib2410.dll.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_core_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_core2410.dll.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_features2d_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_features2d2410.dll.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_flann_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_flann2410.dll.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_gpu_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_gpu2410.dll.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_haartraining_engine.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_highgui_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_highgui2410.dll.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_imgproc_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_imgproc2410.dll.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_legacy_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_legacy2410.dll.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_ml_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_ml2410.dll.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_nonfree_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_nonfree2410.dll.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_objdetect_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_objdetect2410.dll.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_ocl_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_ocl2410.dll.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_perf_calib3d_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_perf_core_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_perf_features2d_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_perf_gpu_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_perf_highgui_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_perf_imgproc_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_perf_nonfree_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_perf_objdetect_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_perf_ocl_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_perf_photo_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_perf_stitching_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_perf_superres_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_perf_video_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_photo_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_photo2410.dll.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_stitching_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_stitching2410.dll.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_superres_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_superres2410.dll.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_test_calib3d_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_test_contrib_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_test_core_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_test_features2d_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_test_flann_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_test_gpu_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_test_highgui_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_test_imgproc_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_test_legacy_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_test_ml_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_test_nonfree_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_test_objdetect_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_test_ocl_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_test_photo_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_test_stitching_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_test_superres_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_test_video_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_ts_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_ts2410.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_video_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_video2410.dll.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_videostab_pch_dephelp.a" />
-			<Add library="F:\OpenCV\opencv\my_build\lib\libopencv_videostab2410.dll.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_calib3d_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_calib3d2410.dll.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_contrib_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_contrib2410.dll.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_core_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_core2410.dll.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_features2d_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_features2d2410.dll.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_flann_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_flann2410.dll.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_gpu_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_gpu2410.dll.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_haartraining_engine.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_highgui_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_highgui2410.dll.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_imgproc_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_imgproc2410.dll.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_legacy_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_legacy2410.dll.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_ml_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_ml2410.dll.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_nonfree_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_nonfree2410.dll.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_objdetect_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_objdetect2410.dll.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_ocl_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_ocl2410.dll.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_perf_calib3d_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_perf_core_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_perf_features2d_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_perf_gpu_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_perf_highgui_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_perf_imgproc_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_perf_nonfree_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_perf_objdetect_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_perf_ocl_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_perf_photo_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_perf_stitching_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_perf_superres_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_perf_video_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_photo_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_photo2410.dll.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_stitching_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_stitching2410.dll.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_superres_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_superres2410.dll.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_test_calib3d_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_test_contrib_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_test_core_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_test_features2d_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_test_flann_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_test_gpu_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_test_highgui_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_test_imgproc_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_test_legacy_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_test_ml_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_test_nonfree_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_test_objdetect_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_test_ocl_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_test_photo_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_test_stitching_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_test_superres_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_test_video_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_ts_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_ts2410.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_video_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_video2410.dll.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_videostab_pch_dephelp.a" />
+			<Add library="D:\OpenCV\opencv\my_build\lib\libopencv_videostab2410.dll.a" />
 		</Linker>
 		<Unit filename="main.cpp" />
 		<Unit filename="tablePicture.cpp" />
